tests/pure/impure_call_assignment.sy
f :: fn ->
    1
end

start :: pu do
    a :: f'
end

// error: Cannot call impure functions from pure functions
